Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25938

Checkable QGroupBox doesn't keep "enabled" status of children

XMLWordPrintable

    • Linux/X11
    • 1748dc3e2d2367f9f01666212a22e6b1dde5dc89 (qt/qtbase/5.15), 9f93ddd2f (dev), 35fe0a0b6 (6.10), 0a1b1424d (6.9), cc67c150f (tqtc/lts-6.8), 825d07971 (tqtc/lts-6.5)

      If we change (in code) the "enabled" status for some direct child of the checkable groupbox:

      ui.checkBox->setEnabled(true)

      then this child will be enabled on program load, though parent groupbox is unchecked and its other children are disabled.
      But if we nest this child checkBox into, for example, another groupbox inside of ours checkable (i.e. make it indirect child), and try to enable it in code, it will be disabled on program load.
      I think we should get the disabled child on program load in both cases - at least this is the behaviour I expected.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vhilshei Volker Hilsheimer
            slackwarwick Mikhael Lantsuzskiy
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: